# components/dms2223frontend/dms2223frontend/data/rest/backendservice.py
@@ -63,6 +63,37 @@ class BackendService():
             response_data.set_content([])
         return response_data
 
+    def create_report(self, token: Optional[str],iddiscussion :int,tiporeport: int, content: str) -> ResponseData:
+        """ Requests a discussion creation.
+
+        Args:
+            - token (Optional[str]): The discussion session token.
+            - title: A string with the discussion title.
+            - content: A string with the discussion content.
+
+        Returns:
+            - ResponseData: If successful, the contents hold a list of user data dictionaries.
+              Otherwise, the contents will be an empty list.
+        """
+        response_data: ResponseData = ResponseData()
+        response: requests.Response = requests.post(
+            self.__base_url() + '/discussions/{qid}/reports',
+            json={
+                'id': iddiscussion,
+                'reason': content,
+                'tiporeport': tiporeport
+            },
+            headers={
+                'Authorization': f'Bearer {token}',
+                self.__apikey_header: self.__apikey_secret
+            }
+        )
+        response_data.set_successful(response.ok)
+        if response_data.is_successful():
+            response_data.set_content(response.json())
+        else:
+            response_data.add_message(response.content.decode('ascii'))
+        return response_data
 
     
     def create_discussion(self, token: Optional[str], title: str, content: str) -> ResponseData:
